CN-419, scrolling issue all the lower contents are visible

--- a/src/client/css/c-next/common-components/cn-filter.scss
+++ b/src/client/css/c-next/common-components/cn-filter.scss
@@ -5,7 +5,7 @@ $bg-tab-content: #f9f9f9;
 $profile-section-shadow: rgba(204, 204, 204, 1);
 
 .filter-container {
-  padding-bottom: 10px;
+  padding-bottom: 60px;
   position: fixed;
   top: 50px;
   left: 0;
